# CSCE-331

./: LICENSE  README.md
.github/workflows/: cmake-test.yml
Week 1/Day 1/: reading-notes.md
Week 1/Day 1/warmup/: info.json  main.cpp
Week 1/Day 2/: git-history.txt  git-quiz.md
Week 1/Day 3/: README.md
Week 1/Day 4/: README.md
Week 1/Day 4/refactor/: info.json  main.cpp
Week 2/: README.md
Week 2/.github/workflows/: cmake-test.yml
Week 2/day-notes/: day1.md  day2.md  day3.md  day4.md  day5-quiz.md  day5-review.md
Week 2/project-calc/: CMakeLists.txt
Week 2/project-calc/include/: calc.hpp
Week 2/project-calc/src/: calc.cpp  main.cpp
Week 2/project-calc/tests/: test_calc.cpp
